--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=URL
+spring.application.name=URLShortener
+
+# (mongodb://<usuário>:<senha>@<host>:<porta>/<nome_do_banco>)
+spring.data.mongodb.uri=mongodb://localhost:27017/url_shortener_db
